# aStyledQDial

./: CMakeLists.txt  StyledDial.cpp  StyledDial.h  main.cpp
